# Parcial

./: README.md  app.py  pyproject.toml
src/prueba/: __init__.py  forms.py
src/prueba/templates/: admin_dashboard.html  base.html  create_event.html  event_detail.html  events_by_category.html  index.html  past_events.html  register_event.html  search_results.html
