[project]
name = "prueba"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "requests>=2.31.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prueba"]
